# pfin_back_etl

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  main.py  mini.py  pyproject.toml  sample.env
.github/workflows/: ci.yml
src/pfin_back_etl/: __init__.py  core.py  test.py  update_asset.py  update_balance_sheet_statement.py  update_cash_flow_statement.py  update_cpi.py  update_earning.py  update_eod_price.py  update_income_statement.py  update_reporting_period.py  utils.py
tests/: conftest.py  test_core.py  test_dbase_setup.py  test_dbase_update.py  test_utils.py
