[project]
name = "pfin-back-etl"
version = "0.1.0"
description = "PersonalFinance Backend Extract/Transform/Load... Scripts to fetch data from FMP and tramsform it for population of PFin database (SupaBase)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fmpstab>=0.2.0",
    "polars>=1.38.0",
    "psycopg2>=2.9.11",
    "pyarrow>=23.0.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
]
